...
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="Slide Show" id="6l5-Op-SNv"/>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="h83-PN-sKc" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
...
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="Report" id="Qd2-Ds-7eu"/>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="sUS-Te-wcr" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3HE-rv-0EJ">
                                <rect key="frame" x="217.33333333333337" y="385" width="135.66666666666663" height="102"/>
                                <accessibility key="accessibilityConfiguration" label="poor"/>
                                <constraints>
                                    <constraint firstAttribute="width" secondItem="3HE-rv-0EJ" secondAttribute="height" multiplier="4:3" id="hq3-4Y-3Dx"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                <state key="normal" title="Poor"/>
                                <connections>
                                    <action selector="Poor:" destination="yS1-Hr-a0a" eventType="touchUpInside" id="Unr-yz-Bj2"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="D3e-pn-CQt">
                                <rect key="frame" x="75" y="385" width="127.33333333333331" height="102"/>
                                <accessibility key="accessibilityConfiguration" label="good"/>
                                <constraints>
                                    <constraint firstAttribute="width" secondItem="D3e-pn-CQt" secondAttribute="height" multiplier="5:4" id="kNr-o0-5wn"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                <state key="normal" title="Good"/>
                                <connections>
                                    <action selector="Goo:" destination="yS1-Hr-a0a" eventType="touchUpInside" id="FeF-iG-uqf"/>
...
                    <navigationItem key="navigationItem" id="oUN-T8-C4N"/>
                    <connections>
                        <outlet property="respond" destination="Ge0-NN-JCW" id="Iuf-lk-ew8"/>
                        <segue destination="bJo-oO-K66" kind="show" identifier="toRecord" id="pt3-Ot-uF8"/>
                    </connections>
...
                                </connections>
                            </imageView>
                            <imageView clipsSubviews="YES" contentMode="scaleAspectFit" image="speaker" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="Ueb-yT-cMT">
                                <rect key="frame" x="338" y="22" width="18" height="17"/>
                                <accessibility key="accessibilityConfiguration">
...
        <scene sceneID="p2m-uc-4ft">
            <objects>
                <viewController title="Selfie" id="9Oo-Yz-czS" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="ySw-Y4-VDW">
                        <rect key="frame" x="0.0" y="0.0" width="428" height="926"/>
...
                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
                            </arscnView>
                            <imageView clipsSubviews="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="person" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="gJK-oX-FQl">
                                <rect key="frame" x="20" y="21.666666666666657" width="50" height="47.333333333333329"/>
                                <accessibility key="accessibilityConfiguration" hint="Recenter Image" label="recenter"/>
...
                                </connections>
                            </imageView>
                            <imageView clipsSubviews="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="camera.circle" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="R77-nD-S2H">
                                <rect key="frame" x="150" y="592" width="75" height="73.666666666666686"/>
                                <accessibility key="accessibilityConfiguration" label="photo"/>
...
