...
    let imageList = [UIImage(named: "slideshow/Photo1"), UIImage(named: "slideshow/Photo2"), UIImage(named: "slideshow/Photo3"), UIImage(named: "slideshow/Photo4"), UIImage(named: "slideshow/Photo5"), UIImage(named: "slideshow/Photo6"), UIImage(named: "slideshow/Photo7"), UIImage(named: "slideshow/Photo8"), UIImage(named: "slideshow/Photo9"), UIImage(named: "slideshow/Photo10")]
    

    var currentShow : [UIImage?]? = nil
    var timer : Timer?
    var player: AVAudioPlayer?
    var mute: Bool = false
    
    @IBOutlet weak var speaker: UIImageView!
    @IBOutlet weak var slideShow: UIImageView!

    @IBAction func NextSlide(_ sender: Any) {
        timer?.invalidate()
...
